escape/src/components/Room.css
/* ... */
.overlay {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 100%;
  z-index: 99;
  pointer-events: none;
  transition: all 0.15s steps(3);
  opacity: 0;
}

.overlay.zoom {
  background: radial-gradient(
    circle,
    rgba(0, 10, 20, 0) 70%,
    rgba(0, 10, 20, 1) 100%
  );
  opacity: 0.35;
  mix-blend-mode: multiply;
  pointer-events: none;
}
.zoomed .overlay.zoom {
  opacity: 0.85;
}

/* basic overlay */
.overlay.darkness {
  opacity: 0;
  pointer-events: none;
  transition: opacity 0.3s ease;
}

/* Flickering lights */
#room.lights-glitch {
  position: relative;
    height: 100vh;
    width: 100%;
    padding: 0;
    overflow: hidden;
    position: fixed;
    align-content: center;
    top: 0;
    left: 0;
    background-color: var(--color-bg-deep);
}

/* lights flickering */
#room.lights-glitch::after {
  content: "";
  position: absolute;
  top: 50% !important;
  left: 50% !important;
  right: 0 !important;
  bottom: 0 !important;
  width: 100vw !important;
  height: 100vh !important;
  background: var(--color-bg-light);
  opacity: 0;
  pointer-events: none;
  z-index: 99999;
  animation: lightFlicker 1.5s ease-in-out forwards;
}

/* lights off*/
#room.dark .overlay.darkness {
  background: var(--color-accent-dark);
  mix-blend-mode: multiply;
  opacity: 0.8;
  pointer-events: none;
}

/* noise */
#room.dark .overlay.darkness::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-image: url("../img/noise.webp");
  background-size: cover;
  background-position: center center;
  animation: fuzz 1s steps(6) infinite;
  opacity: 0.15;
}

#itemCur {
  position: fixed;
  pointer-events: none;
  z-index: 1000;
}

/*Dialog/Comments*/

#dialog {
  position: fixed;
  z-index: 999;
  pointer-events: none;
  bottom: 3.5rem;
  left: 0;
  width: 100%;
  max-width: 65ch;
  line-height: 1.4;
  height: 60%;
  color: var--(--color-text-main);
  padding: 0.5rem 0.75rem;
  display: grid;
  align-content: end;
  text-shadow: 0 0.1em 0.2em var(--color-overlay);
  overflow: hidden;
}

#dialog > div {
  max-width: max-content;
  width: 100%;
  pointer-events: auto;
  color: var(--color-text-main);
  border: 1px solid var(--color-text-dim);
  background: var(--color-bg-panel);
  border-radius: var(--border-radius-sm);
  padding: 0.5em 0.75em;
  margin-bottom: 0.5em;
  font-size: var(--font-middle);
  line-height: 1.5em;
}

#dialog > div:hover {
  opacity: 0.8;
}

#dialog q {
  font-style: italic;
}

#dialog .hint {
  font-style: italic;
  color: var(--color-hint);
}

#dialog .success {
  color: var(--color-success);
  font-weight: bold;
  border-color: var(--color-success);
}

#dialog .error {
  color: var(--color-error);
  font-weight: bold;
  animation: shake 0.4s;
  border-color: var(--color-error);
}

@media (max-width: 989px) {
  .room-wrap {
    overflow: hidden;
  }
}

@media (max-width: 548px) {

  .room {
    height: 60vh;
  }

  #dialog > div {
    font-size: var(--font-small);
  }
}


@keyframes shake {
  0%, 100% { transform: translateX(0); }
  20%, 60% { transform: translateX(-6px); }
  40%, 80% { transform: translateX(6px); }
}

@keyframes fuzz {
  0%   { background-position: 0 0; }
  50%  { background-position: -150px 150px; }
  100% { background-position: 250px 250px; }
}

@keyframes ghostFlash {
  0%   { opacity: 0; }
  20%  { opacity: 0.9; }
  50%  { opacity: 0.5; }
  100% { opacity: 0; }
}

@keyframes lightFlicker {
  0%   { opacity: 0.6; }
  20%  { opacity: 1; }
  40%  { opacity: 0.7; }
  60%  { opacity: 1; }
  80%  { opacity: 0.8; }
  100% { opacity: 1; }
}

